# music-bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/core/: __main__.py  crud.py  loader.py  states.py
app/core/extensions/: InlineStack.py  MessageBox.py  __init__.py
app/core/handlers/: __init__.py  base.py  callback_query_handler.py  commands.py  echo.py  handlers.py  local_search.py  message_handlers.py  music.py  music_search.py  music_send.py  playlist_tracks.py  plug.py  profile.py  registry.py  set_link.py  start.py  templates.py  text.py  view.py
app/core/markups/inline/: PlaylistsMarkup.py  ResultsMarkup.py  SearchResultsMarkup.py  UserProfileMarkup.py  __init__.py
app/core/services/: MessageBox.py  __init__.py  cache.py  lock_table.py  manager.py  playlists.py  search.py  strategies.py  upload.py  users.py
app/core/tools/: __init__.py  validator.py
app/db/: orm.py  schema.py
app/db/migrations/: env.py
app/db/migrations/versions/: 14c9053b46b7_update_title_artist_size.py  2021c54e4187_update_tracks_new_column_duration.py  33812076d563_update_url_and_cover_url_size.py  4ca2de91a793_initial.py  9c3ebd311352_new_table_users.py
app/utils/: AbstractBotModel.py  WebhookBotModel.py
docs/: CHANGES.md
tests/: conftest.py
tests/unit/: test_music_searcher.py  test_searcher.py  test_validator.py  tets_lru_cache.py
