[tool.poetry]
name = "music-bot"
version = "0.0.1"
description = "Bot with music from VK."
authors = ["Kirill Lapushinskiy <kirill@lapushinskiy.ru>", "Nikita Novikov <sqqvt1@gmail.com>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.21"
loguru = "^0.6.0"
SQLAlchemy = "^1.4.39"
asyncpg = "^0.26.0"
alembic = "^1.8.0"
aiovkmusic = "^1.5.0"
emoji = "^1.7.0"
aiofiles = "^0.8.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
